fix: remove link to rsschool

--- a/rsschool-cv/index.html
+++ b/rsschool-cv/index.html
@@ -96,14 +96,14 @@
                 <h2>Code</h2>
                 <pre>
                     <code>
-    function createPhoneNumber(numbers) {
-        let arr1 = numbers.splice(0, 3);
-        let arr2 = numbers.splice(0, 3);
-        let arr3 = numbers.splice(0, 4);
-        const str = `(${arr1.join('')}) ${arr2.join('')}-${arr3.join('')}`
-    
-        return str
-    }
+                        function createPhoneNumber(numbers) {
+                        let arr1 = numbers.splice(0, 3);
+                        let arr2 = numbers.splice(0, 3);
+                        let arr3 = numbers.splice(0, 4);
+                        const str = `(${arr1.join('')}) ${arr2.join('')}-${arr3.join('')}`
+
+                        return str
+                        }
                     </code>
                 </pre>
             </section>
@@ -119,15 +119,19 @@
                     <p>npm install</p>
                     <p>npm start</p>
                     <img src="img/momentum_small.png" alt="Momentum Webpack Project">
-                    <p><a href="https://rolling-scopes-school.github.io/guschins-JSFEPRESCHOOL2022Q2/momentum/dist/" target="_blank">Demo</a></p>
-                    <p><a href="https://github.com/rolling-scopes-school/guschins-JSFEPRESCHOOL2022Q2/tree/momentum/momentum" target="_blank">See code</a></p>
+                    <p><a href="https://rolling-scopes-school.github.io/guschins-JSFEPRESCHOOL2022Q2/momentum/dist/"
+                            target="_blank">Demo</a></p>
+                    <p><a href="https://github.com/rolling-scopes-school/guschins-JSFEPRESCHOOL2022Q2/tree/momentum/momentum"
+                            target="_blank">See code</a></p>
                 </div>
                 <hr>
                 <div>
                     <h4>Travel Desktop and Mobile project</h4>
                     <img src="img/travel_small.png" alt="Travel Desktop and Mobile project">
-                    <p><a href="https://rolling-scopes-school.github.io/guschins-JSFEPRESCHOOL2022Q2/travel/" target="_blank">Demo</a></p>
-                    <p><a href="https://github.com/rolling-scopes-school/guschins-JSFEPRESCHOOL2022Q2/tree/travel/travel" target="_blank">See code</a></p>
+                    <p><a href="https://rolling-scopes-school.github.io/guschins-JSFEPRESCHOOL2022Q2/travel/"
+                            target="_blank">Demo</a></p>
+                    <p><a href="https://github.com/rolling-scopes-school/guschins-JSFEPRESCHOOL2022Q2/tree/travel/travel"
+                            target="_blank">See code</a></p>
                 </div>
                 <hr>
                 <div>
@@ -257,11 +261,11 @@
                 <a href="https://github.com/GuschinS">GuschinS.</a>
                 <span>2022.</span>
             </div>
-            <div class="rs">
+            <!-- <div class="rs">
                 <a href="https://rs.school/js/">
                     <img src="img/rs_school_js.svg" alt="rs_school_js">
                 </a>
-            </div>
+            </div> -->
         </footer>
     </div>
 </body>
