add codejam project

--- a/rsschool-cv/index.html
+++ b/rsschool-cv/index.html
@@ -71,10 +71,13 @@
             </ul>
             <article id="about">
                 <h2>About</h2>
-                <p>
+                <p class="about">
                     I have no commercial experience yet, but I help nonprofit organizations and activists to create and
+
                     maintain Web pages as a volunteer. Now, I am changing my main occupation and looking for a job in IT
+
                     area. My strengths are the ability to structure tasks, prioritize, be flexible and take
+
                     responsibility. I have been living in Poland for 8 years and I am a citizen of Poland.
                 </p>
             </article>
@@ -92,42 +95,57 @@
                     <p>Other: Git/GitHub.</p>
                 </li>
             </ul>
-            <section id="code">
+            <!-- <section id="code">
                 <h2>Code</h2>
                 <pre>
                     <code>
-    function createPhoneNumber(numbers) {
-        let arr1 = numbers.splice(0, 3);
-        let arr2 = numbers.splice(0, 3);
-        let arr3 = numbers.splice(0, 4);
-        const str = `(${arr1.join('')}) ${arr2.join('')}-${arr3.join('')}`
-    
-        return str
-    }
+                        function createPhoneNumber(numbers) {
+                        let arr1 = numbers.splice(0, 3);
+                        let arr2 = numbers.splice(0, 3);
+                        let arr3 = numbers.splice(0, 4);
+                        const str = `(${arr1.join('')}) ${arr2.join('')}-${arr3.join('')}`
+
+                        return str
+                        }
                     </code>
                 </pre>
-            </section>
+            </section> -->
             <section id="projects">
                 <div>
                     <h2>Projects:</h2>
                 </div>
                 <div>
+                    <h4>CodeJam Webpack Project</h4>
+                    <p>To run locally:</p>
+                    <p>git clone https://github.com/GuschinS/rsschool-stage0.git</p>
+                    <p>cd codejam</p>
+                    <p>npm install</p>
+                    <p>npm start</p>
+                    <img src="img/codejam_small.png" alt="CodeJam Webpack Project">
+                    <p><a href="https://guschins.github.io/rsschool-stage0/codejam/dist/" target="_blank">Demo</a></p>
+                    <p><a href="https://github.com/GuschinS/rsschool-stage0/tree/main/codejam" target="_blank">See
+                            code</a></p>
+                </div>
+                <hr>
+                <div>
                     <h4>Momentum Webpack Project</h4>
                     <p>To run locally:</p>
-                    <p>git clone https://github.com/rolling-scopes-school/guschins-JSFEPRESCHOOL2022Q2.git</p>
+                    <p>git clone https://github.com/GuschinS/rsschool-stage0.git</p>
                     <p>cd momentum</p>
                     <p>npm install</p>
                     <p>npm start</p>
                     <img src="img/momentum_small.png" alt="Momentum Webpack Project">
-                    <p><a href="https://rolling-scopes-school.github.io/guschins-JSFEPRESCHOOL2022Q2/momentum/dist/" target="_blank">Demo</a></p>
-                    <p><a href="https://github.com/rolling-scopes-school/guschins-JSFEPRESCHOOL2022Q2/tree/momentum/momentum" target="_blank">See code</a></p>
+                    <p><a href="https://guschins.github.io/rsschool-stage0/momentum/dist/" target="_blank">Demo</a></p>
+                    <p><a href="https://github.com/GuschinS/rsschool-stage0/tree/main/momentum" target="_blank">See
+                            code</a></p>
                 </div>
                 <hr>
                 <div>
                     <h4>Travel Desktop and Mobile project</h4>
                     <img src="img/travel_small.png" alt="Travel Desktop and Mobile project">
-                    <p><a href="https://rolling-scopes-school.github.io/guschins-JSFEPRESCHOOL2022Q2/travel/" target="_blank">Demo</a></p>
-                    <p><a href="https://github.com/rolling-scopes-school/guschins-JSFEPRESCHOOL2022Q2/tree/travel/travel" target="_blank">See code</a></p>
+                    <p><a href="https://guschins.github.io/rsschool-stage0/travel/" target="_blank">Demo</a></p>
+                    <p><a href="https://github.com/GuschinS/rsschool-stage0/tree/main/travel" target="_blank">See
+                            code</a></p>
                 </div>
                 <hr>
                 <div>
@@ -257,11 +275,11 @@
                 <a href="https://github.com/GuschinS">GuschinS.</a>
                 <span>2022.</span>
             </div>
-            <div class="rs">
+            <!-- <div class="rs">
                 <a href="https://rs.school/js/">
                     <img src="img/rs_school_js.svg" alt="rs_school_js">
                 </a>
-            </div>
+            </div> -->
         </footer>
     </div>
 </body>
